--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".RegisterActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -27,7 +27,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/walmartLogo"
             android:layout_centerHorizontal="true"
-            android:text="@string/lblSignInAccount"
+            android:text="@string/lblCreateNewAccount"
             android:textColor="@color/gray"
             android:textSize="25sp" />
 
@@ -55,7 +55,39 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="@string/lblEnterEmailRequired"
+                android:text="@string/lblFirstName"
+                android:textColor="@color/gray" />
+
+            <EditText
+                android:id="@+id/txtFirstName"
+                android:layout_width="match_parent"
+                android:layout_height="35dp"
+                android:autofillHints="Enter email"
+                android:background="@drawable/textbox_style"
+                android:hint="@string/lblEmpty"
+                android:inputType="text" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="@string/lblLastName"
+                android:textColor="@color/gray" />
+
+            <EditText
+                android:id="@+id/txtLastName"
+                android:layout_width="match_parent"
+                android:layout_height="35dp"
+                android:autofillHints="Enter email"
+                android:background="@drawable/textbox_style"
+                android:hint="@string/lblEmpty"
+                android:inputType="text" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="@string/lblEmailAddressStared"
                 android:textColor="@color/gray" />
 
             <EditText
@@ -75,7 +107,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="@string/lblPasswordRequired"
+                android:text="@string/lblPasswordStared"
                 android:textColor="@color/gray" />
 
             <EditText
@@ -87,22 +119,10 @@
                 android:hint="@string/lblEmpty"
                 android:inputType="textPassword" />
 
-            <TextView
-                android:id="@+id/tvForgotPasswordButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:layout_marginTop="2dp"
-                android:autoLink="all"
-                android:clickable="true"
-                android:focusable="true"
-                android:text="@string/lblForgotPassword"
-                android:textColor="@color/darkGray"
-                android:textSize="12sp" />
 
             <Space
                 android:layout_width="match_parent"
-                android:layout_height="50dp" />
+                android:layout_height="20dp" />
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btnSignIn"
@@ -111,35 +131,12 @@
                 android:layout_marginTop="10dp"
                 android:background="@drawable/walmart_blue_button"
                 android:gravity="center"
-                android:text="@string/lblSignIn"
+                android:text="@string/lblCreateAccount"
                 android:textAllCaps="false"
                 android:textColor="#FFFFFF" />
 
-            <Space
-                android:layout_width="match_parent"
-                android:layout_height="50dp" />
-
-            <TextView
-                android:id="@+id/lblNoAcc"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:text="@string/lblNoAccount"
-                android:textColor="@color/darkGray"
-                android:textSize="12sp" />
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/btnCreateNewAcc"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp"
-                android:background="@drawable/blue_border_button"
-                android:gravity="center"
-                android:text="@string/lblCreateNewAcc"
-                android:textAllCaps="false"
-                android:textColor="@color/walmart" />
         </LinearLayout>
     </RelativeLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
