--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,7 @@
             android:textSize="25sp" />
 
         <Space
-            android:id="@+id/spaceOne"
+            android:id="@+id/spaceTwo"
             android:layout_width="match_parent"
             android:layout_height="20dp"
             android:layout_below="@+id/lblSignInAccount" />
@@ -64,7 +64,7 @@
                 android:layout_height="35dp"
                 android:autofillHints="Enter email"
                 android:background="@drawable/textbox_style"
-                android:hint="@string/lblEmpty"
+                android:hint="@string/lblSampleEmail"
                 android:inputType="textEmailAddress" />
 
             <Space
@@ -84,7 +84,7 @@
                 android:layout_height="35dp"
                 android:autofillHints="Enter password"
                 android:background="@drawable/textbox_style"
-                android:hint="@string/lblEmpty"
+                android:hint="@string/lblSamplePassword"
                 android:inputType="textPassword" />
 
             <TextView
