--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -32,7 +32,7 @@
             android:textSize="25sp" />
 
         <Space
-            android:id="@+id/spaceOne"
+            android:id="@+id/spaceTwo"
             android:layout_width="match_parent"
             android:layout_height="20dp"
             android:layout_below="@+id/lblSignInAccount" />
