--- a/app/src/main/res/layout/activity_shopping.xml
+++ b/app/src/main/res/layout/activity_shopping.xml
@@ -42,6 +42,7 @@
             <TableRow>
 
                 <LinearLayout
+                    android:id="@+id/llElectronics"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
